Responsive changes and adding hamburger menu for mobile

--- a/src/styles/common.styl
+++ b/src/styles/common.styl
@@ -77,3 +77,9 @@ hr
   background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%)
   border: none
   height: 4px
+
+.bm-burger-button
+  display: none;
+
+  @media(max-width: 768px)
+    display: block;
